--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.3.4",
     "immutable": "^3.7.5",
     "koa": "^1.1.2",
+    "koa-jwt": "^1.1.1",
     "koa-mount": "^1.3.0",
     "koa-router": "^5.3.0",
     "koa-static": "^1.5.2",
@@ -39,7 +40,8 @@
     "prestart": "npm run lint",
     "lint": "jshint *.js",
     "clean": "rimraf lib/*",
-    "test": "./node_modules/.bin/testem"
+    "test": "./node_modules/.bin/testem",
+    "watch:test": "mocha test -u bdd -R min -w"
   },
   "author": "",
   "license": "ISC"
