Add papichulo watcher. Clean out authoration attempt.

--- a/.jshintrc
+++ b/.jshintrc
@@ -2,6 +2,7 @@
     "node": true,
     "esnext": true,
     "asi": true,
+    "validthis": true,
     "noyield": true,
     "bitwise": true,
     "camelcase": true,
