--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "ejs": "^2.3.4",
     "immutable": "^3.7.5",
     "koa": "^1.1.2",
-    "koa-jwt": "^1.1.1",
     "koa-mount": "^1.3.0",
     "koa-router": "^5.3.0",
     "koa-static": "^1.5.2",
     "my-node-utils": "git+https://github.com/brianmd/my-node-utils.git",
-    "ramda": "^0.18.0"
+    "ramda": "^0.18.0",
+    "redis": "^2.4.2"
   },
   "devDependencies": {
     "chai": "^3.4.1",
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "start": "DEBUG=* node --harmony_destructuring --harmony_default_parameters server.js",
-    "prestart": "npm run lint",
+    "ppprestart": "npm run lint",
     "lint": "jshint *.js",
     "clean": "rimraf lib/*",
     "test": "./node_modules/.bin/testem",
